# solana-token-deployer

./: .gitignore
server/: .env  .gitignore  .prettierrc  app.ts  env.sample  package.json  tsconfig.json
server/src/: RUST.rs
server/src/config/: getAssociateAccount.ts  getPoolPrograms.ts  getSwapInstructions.ts  poolKeys.ts  solana.connection.ts
server/src/controllers/: fileController.ts  fileupload.controller.ts  pool.controller.ts  swap.controller.ts
server/src/createlp/: config.js  config.ts  marketCreation.js  marketCreation.ts  poolCreation.js  poolCreation.ts
server/src/interfaces/: pool_program.ts
server/src/middlewares/: multer.ts
server/src/models/: poolDetails.model.ts  poolDetails.ts  rootMasterAccount.model.ts  swapDetails.ts  token.model.ts
server/src/routes/: dex.routes.ts  fileRoutes.ts  fileupload.routes.ts  pool.routes.ts  routes.ts
server/src/types/: express.d.ts
server/src/utils/: connectDb.ts  getBalance.ts  getSolanaAccounts.ts  seedConstant.ts
tkn_launcher/: Anchor.toml
tkn_launcher/programs/tkn_launcher/: Cargo.toml
tkn_launcher/programs/tkn_launcher/src/: lib.rs
tkn_launcher/programs/token/: Cargo.toml
tkn_launcher/tests/: tkn_launcher.ts
token-program/: .prettierignore  Anchor.toml  package-lock.json
token-program/programs/pool/: Cargo.toml
token-program/programs/pool/src/: check.rs  constants.rs  error.rs  lib.rs
token-program/programs/spltoken/: Cargo.toml
token-program/programs/token-program/: Cargo.toml
token-program/tests/: pool_tests.ts  token-program.ts  token-program_tests.ts
(+6 files in other folders)
